--- a/docs/kuberay/ray-cluster.rayllm-eks.yaml
+++ b/docs/kuberay/ray-cluster.rayllm-eks.yaml
@@ -1,8 +1,11 @@
-apiVersion: ray.io/v1alpha1
+apiVersion: ray.io/v1
 kind: RayCluster
 metadata:
   name: rayllm
 spec:
+  rayVersion: '2.7.0'
+  enableInTreeAutoscaling: true
+
   # Ray head pod template
   headGroupSpec:
     # The `rayStartParams` are used to configure the `ray start` command.
@@ -33,13 +36,13 @@ spec:
             name: client
   workerGroupSpecs:
   # the pod replicas in this group typed worker
-  - replicas: 1
+  - replicas: 0
     minReplicas: 0
-    maxReplicas: 1
+    maxReplicas: 2
     # logical group name, for this called small-group, also can be functional
-    groupName: gpu-group
+    groupName: gpu-oup
     rayStartParams:
-      resources: '"{\"accelerator_type_cpu\": 48, \"accelerator_type_a10\": 2, \"accelerator_type_a100_80g\": 2}"'
+      resources: '"{\"accelerator_type_cpu\": 48, \"accelerator_type_a10\": 2}"'
     #pod template
     template:
       spec:
@@ -52,13 +55,13 @@ spec:
                 command: ["/bin/sh","-c","ray stop"]
           resources:
             limits:
-              cpu: "48"
-              memory: "192G"
-              nvidia.com/gpu: 4
+              cpu: "24"
+              memory: "96G"
+              nvidia.com/gpu: 2
             requests:
-              cpu: "36"
-              memory: "128G"
-              nvidia.com/gpu: 4
+              cpu: "12"
+              memory: "48G"
+              nvidia.com/gpu: 2
         # Please add the following taints to the GPU node.
         tolerations:
           - key: "ray.io/node-type"
