--- a/values.yaml
+++ b/values.yaml
@@ -1,9 +1,9 @@
 service:
   name: rayllm-head-svc
-  externalPort: 8000
+  externalPort: "8265"
 ingress:
   hosts:
-    - ${RAYLLM_HEAD_SVC_INGRESS_HOST}
+    - "${FRONTEND_INGRESS_HOST}"
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
