--- a/docs/kuberay/ray-cluster.rayllm-eks.yaml
+++ b/docs/kuberay/ray-cluster.rayllm-eks.yaml
@@ -20,7 +20,12 @@ spec:
         containers:
         - name: ray-head
           image: anyscale/ray-llm:latest
-          command: ["serve", "run", "~/serve_configs/amazon--LightGPT.yaml"]
+          command: ["/bin/sh", "-c"]
+          args: 
+          - |
+            ray start --head --port=6379 --dashboard-host=0.0.0.0 --autoscaling-config=~/autoscaler.yaml &
+            sleep 60 # Waiting for Ray to be fully initialized
+            serve run ~/serve_configs/amazon--LightGPT.yaml
           resources:
             limits:
               cpu: 2
